test/spec_vectors/return_call/ok/module_6.wat
(module (func $arity-2-vs-0 (f64.const 2) (i32.const 1) (return_call 1)) (func))