test/spec_vectors/return_call/fail/module_1.wat
(module (func $type-void-vs-num (result i32) (return_call 1) (i32.const 0)) (func))